# ash-base

./: .gitignore  Cargo.toml  build.rs  readme.md
scripts/: build_shaders.rs
shader/: vert.spv
shader/texture/: frag.spv  texture.frag
src/: engine.rs  main.rs
src/engine/: coherent_quads.rs  commandbuffer.rs  debugging.rs  dimensions.rs  image_manager.rs  input_state.rs  memory.rs  vec3.rs  vertex.rs  vertex_generation.rs  vulkan_attachments.rs  vulkan_bindings.rs  vulkan_commands.rs  vulkan_depth_image.rs  vulkan_descriptor.rs  vulkan_fences.rs  vulkan_framebuffer.rs  vulkan_image.rs  vulkan_instance.rs  vulkan_logical_device.rs  vulkan_physical_device.rs  vulkan_pipeline.rs  vulkan_render_pass.rs  vulkan_sampler.rs  vulkan_semaphores.rs  vulkan_shaders.rs  vulkan_surface.rs  vulkan_surface_capabilities.rs  vulkan_swapchain.rs  vulkan_texture.rs  vulkan_ubo.rs  winit_window.rs
