[package]
name = "ash-grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked", "debug"] }
ash-window = "0.13.0"
image = "0.25.1"
rand = "0.8.5"
raw-window-handle = "0.6.0"
winit = "0.29.15"
